server/public/styles.css
html,
body {
  height: 100%;
  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
  background-color: #fff;
}

#root {
  height: 100%;
  min-width: 320px;
  max-width: 750px;
  margin: 0 auto;
  background-color: #fff;
}

main {
  height: 100%;
  padding: 0.75rem;
}

h1,
h2,
h3,
h4 {
  font-family: 'Signika', Helvetica, sans-serif;
  font-weight: 700;
  text-shadow: 1px 1px 1px rgba(161, 161, 161, 0.534);
}

hr {
  background-color: #dbdbdb;
  height: 0.5px;
}

button {
  background-color: #40b4a6;
  color: white;
  font-weight: 600;
  border: 0;
  padding: 0.75rem 1.5rem;
  filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.75));
}

input,
label {
  font-weight: 600;
}

a:active,
button:active {
  transition-duration: 0.1s;
  transform: scale(0.98);
}

th {
  color: #40b4a6;
}

.table td,
.table th {
  border-top: none;
}

.table thead th {
  border-bottom: 1px solid #dee2e6;
}

.nav {
  background-color: rgb(243, 243, 243);
  height: 3.5rem;
  z-index: 1;
}

.footer {
  background-color: #40b4a6;
  height: 3.25rem;
  z-index: 1;
}

.icon {
  color: black;
  filter: drop-shadow(0 1px 1px rgba(95, 95, 95, 0.75));
}

.overlay {
  top: 0;
  left: 0;
  z-index: 2;
  background-color: rgba(0, 0, 0, 0.7);
  transition: 0.5s;
}

.form-control {
  border-color: #6bdcce;
}

.form-control:focus {
  color: #40b4a6;
}

.light-teal {
  color: #6bdcce;
}

.dark-teal {
  color: #40b4a6;
}

.yellow {
  color: #ffad0f;
}

.bg-gradient {
  background: linear-gradient(180deg, #6bdcce 0%, rgba(107, 220, 206, 0) 49.15%);
}

.text-grey {
  color: #979797;
  font-weight: 400;
}

.logo-outer-div {
  overflow: hidden;
}

.logo-bg {
  width: 130%;
  position: relative;
  right: 15%;
  background-color: #6bdcce;
  border-radius: 0 0 50% 50%;
}

.nofilter {
  filter: none;
}

.signup-in-container {
  height: 50%;
}

.signin-up {
  font-weight: 600;
  color: #ffad0f;
}

.signin-up:hover {
  color: #ffc75e;
  text-decoration: none;
}

.deactivate,
.deactivate:active {
  transition-duration: none;
  transform: none;
  color: #eee;
}

.hidden {
  visibility: hidden !important;
}

.d-none {
  display: none !important;
}

@media (min-width: 550px) {
  form {
    width: 550px;
  }

  .form-container {
    width: 420px;
  }

  .f-container,
  .f.form-group,
  .f.form-control {
    width: 370px;
  }
}

@media (max-width: 550px) {
  form {
    width: 100%;
  }

  .form-container {
    width: 80%;
  }
}

@media (min-width: 414px) {
  .home-list {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
  }

  .flex-item {
    width: 50%;
    margin: 0.75rem 0.75rem 0 1rem;
    flex: 1;
  }

  .trip-entry {
    height: 100%;
  }
}

@media (max-width: 414px) {
  html,
  body {
    font-size: 12px;
  }

  form {
    width: 100%;
  }

  .form-container {
    width: 80%;
  }

  .home-list {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .flex-item {
    width: 100%;
    margin: 0;
  }
}

